--- a/TP3_Architectures_micro_service/inventory-service/src/main/resources/application.properties
+++ b/TP3_Architectures_micro_service/inventory-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8083
-spring.application.name=inventory-service
+spring.application.name=product-service
 spring.datasource.url=jdbc:h2:mem:inventory-db
-spring.cloud.discovery.enabled=false
+spring.cloud.discovery.enabled=true
